Object functions, html structure, styles

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,11 @@ main {
 .square {
     border: 1px solid white;
 }
+
+.no-pointer-events {
+    pointer-events: none;
+}
+
+.hidden {
+    visibility: none;
+}
