--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,16 @@ body {
     font-family: Roboto Condensed, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+#sidebar, #settings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #sidebar {
-    display: grid;
-    grid-template-rows: 2fr 1fr 1fr 1fr;
     color: inherit;
-    border: 1px solid white;
+    justify-content: space-evenly;
+    font-size: large;
 }
 
 #sidebar > div {
@@ -70,4 +75,19 @@ main {
 button {
     padding: 8px;
     font-family: inherit;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-bottom: 32px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.github-link { 
+    width: 16px; 
+    margin-left: 5px; 
 }
